fixes popup from going off screen on mobile

--- a/split-buttons/style.css
+++ b/split-buttons/style.css
@@ -243,6 +243,10 @@ body {
     }
   }
 
+  @media (width <= 400px) {
+    left: -200%;
+  }
+
   & > li {
     max-inline-size: 45ch;
   }
